--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-OpenCityCamp Ulm 2012 -- Slide Decks
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+    "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>OpenCityCamp Ulm 2012 -- Slide Decks</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
+  </head>
+  <body>
+  	<h1>OpenCityCamp Ulm 2012</h1>
+  	<h2>Slide Decks</h2>
+  	<ul>
+  		<li><a href="intro-stk/index.hmtl"></a></li>
+  		<li><a href="JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf">JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf</a></li>
+  		<li><a href="JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf">JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf</a></li>
+  	</ul>
+  </body>
+</html>
