--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   	<h1>OpenCityCamp Ulm 2012</h1>
   	<h2>Slide Decks</h2>
   	<ul>
+  	<!--
+  		TODO: stk fix CC status
   		<li><a href="intro-stk/index.html">Einführungsfolien</a></li>
+  		
+  	-->
   		<li><a href="JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf">JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf</a></li>
   		<li><a href="JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf">JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf</a></li>
   	</ul>
