added proper cc attribution

--- a/intro-stk/index.html
+++ b/intro-stk/index.html
@@ -96,7 +96,7 @@
 
 			<article class='fill'>
 				<img  src='assets/images/1427691715_438aa58bf9_b.jpg'>
-				<div class='source white'>Bild: <a href="http://www.flickr.com/photos/manc/1427691715">mrmanc</a> (cc-by-sa 2.0)</div>				
+				<div class='source white'>Bild: <a href="http://www.flickr.com/photos/manc/1427691715">mrmanc</a> (<a href="http://creativecommons.org/licenses/by-sa/2.0/">cc-by-sa 2.0</a>)</div>				
 			</article>				
 
 
@@ -162,6 +162,7 @@
 					<li><strong>Offene Lizenz:</strong> kostenfreie Nutzung mit Möglichkeit auch zu kommerzieller Weiterverarbeitung</li>
     					<li><strong>Maschinenlesbarkeit:</strong> Daten liegen in dokumentiertem, (offenen) Rohformat vor</strong></li>
 				</ul>
+				<div class="source">(geguttenborgt bei <a href="http://stefanwehrmeyer.com/talks/openoepnv/#offen-open">Stefan Wehrmeyer</a>)</div>
 			</article>	
 
 			<article class="">
@@ -274,7 +275,7 @@
 											
 			<article class="fill">
 				<h1>Haushaltsvisualisierungen</h1>
-				<h3>hoffentlich bald; siehe offenerhaushalt.de</h3>
+				<h3>hoffentlich bald für Ulm; siehe offenerhaushalt.de</h3>
 			</article>
 			<article class="fill">
 				<iframe src='http://bund.offenerhaushalt.de/'></iframe>
@@ -312,11 +313,14 @@
 
 			<article class="fill">
 				<img src="assets/images/freifunk.jpg" />
+				<div class='source white'>Bild: <a href="https://secure.flickr.com/photos/rportrr/268930608/">rprtrr</a> (<a href="http://creativecommons.org/licenses/by-sa/2.0/">cc-by-sa 2.0</a>)</div>
 			</article>	
 
 
 			<article class="fill">
 				<img src="assets/images/thingomatic.jpg" />
+				<div class='source white'>Bild: <a href="https://secure.flickr.com/photos/telecom-bretagne/6678521929/">Telecom Bretagne</a> (<a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">cc-by-nc-sa 2.0</a>)</div>
+
 			</article>	
 
 			<article class="fill">
@@ -334,6 +338,7 @@
 			<article class="">
 				<h3>License</h3>
 				<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</p>
+				<p>Title Slide: <a href="https://secure.flickr.com/photos/jonasj/190693907/">Bridge to Ulm by jonasj</a>, <a href="http://creativecommons.org/licenses/by-sa/2.0/">cc-by-sa</a>.
 			</article>
 			
 			<article class="fill">
