added more slides

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   	<h1>OpenCityCamp Ulm 2012</h1>
   	<h2>Slide Decks</h2>
   	<ul>
-  		<li><a href="intro-stk/index.html">Einführungsfolien</a></li>  		
-  		<li><a href="JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf">JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf</a></li>
-  		<li><a href="JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf">JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf</a></li>
+  		<li><a href="intro-stk/index.html">Einführungsfolien (Stefan Kaufmann) </a></li>  		
+  		<li><a href="JvL-120512-PRAE-OpenGovernmentData-Ulm-V1.pdf">OpenGovernmentData (Jörn von Lucke)</a></li>
+  		<li><a href="JvL-120512-PRAE-OpenBudget-Ulm-V1.pdf">OpenBudget (Jörn von Lucke)</a></li>
+  		<li><a href="lod-praesentation.pdf">Linked Open Data Einführung (Birte Glimm)</a></li>
+  		<li><a href="frrm.pdf">freiraum Ulm (Nicolai Waniek,  Lyn-Rouven Schirra)</a></li>
   	</ul>
   </body>
 </html>
